Fix spacing of add quest button in quest selector

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -196,6 +196,7 @@
 }
 
 .QuestSelector button {
+  margin-top: 0;
   border: none;
   outline: none;
   font-family: inherit;
